<resources>
    <string name="app_name">Offline Demo</string>
    <string name="action_settings">Settings</string>

    <string name="title_prepare_asset">Prepare</string>
    <string name="title_start_download">Start</string>
    <string name="title_play_local">Play</string>
    <string name="title_remove_asset">Remove</string>

    <string name="title_activity_play">Player</string>
    <string name="title_asset_status">Status</string>

    <string name="enable_prefetch">ExoProvider (Prefetch)</string>
    <string name="enable_dtg">DTGProvider</string>
    <string name="disable_prefetch">Disable Prefetch</string>
</resources>
