<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    android:id="@+id/contentLayout"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/prepareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:minHeight="0dp" android:minWidth="0dp"

        android:layout_marginTop="8dp"
        android:text="@string/title_prepare_asset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:minHeight="0dp" android:minWidth="0dp"

        android:layout_marginTop="8dp"
        android:text="@string/title_start_download"
        app:layout_constraintStart_toEndOf="@id/prepareButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:minHeight="0dp" android:minWidth="0dp"

        android:layout_marginTop="8dp"
        android:text="@string/title_play_local"
        app:layout_constraintStart_toEndOf="@id/startButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/removeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:minHeight="0dp" android:minWidth="0dp"

        android:layout_marginTop="8dp"
        android:text="@string/title_remove_asset"
        app:layout_constraintStart_toEndOf="@id/playButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/statusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"

        android:minHeight="0dp" android:minWidth="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_asset_status"
        app:layout_constraintStart_toEndOf="@id/removeButton"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>